--- a/motionlayout-master/motionlayout-start/app/src/main/res/layout/activity_step2.xml
+++ b/motionlayout-master/motionlayout-start/app/src/main/res/layout/activity_step2.xml
@@ -22,15 +22,16 @@
         app:layoutDescription="@xml/step2" >
 
     <ImageView
-        android:id="@+id/background"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:scaleType="centerCrop"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/background" />
+            android:id="@+id/background"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:srcCompat="@drawable/background"
+            android:scaleType="centerCrop"
+    />
 
 
     <ImageView
