--- a/motionlayout-master/motionlayout-start/app/src/main/res/xml/step4.xml
+++ b/motionlayout-master/motionlayout-start/app/src/main/res/xml/step4.xml
@@ -30,12 +30,40 @@
 
         <KeyFrameSet>
             <KeyPosition
+                app:framePosition="10"
+                app:motionTarget="@id/moon"
+                app:keyPositionType="parentRelative"
+                app:percentY="0.1"
+                />
+
+            <KeyPosition
+                app:framePosition="25"
+                app:motionTarget="@id/moon"
+                app:keyPositionType="parentRelative"
+                app:percentY="0.6"
+                />
+
+            <KeyPosition
                     app:framePosition="50"
                     app:motionTarget="@id/moon"
                     app:keyPositionType="parentRelative"
                     app:percentY="0.5"
             />
             <!-- TODO: Add two more KeyPositions to the KeyFrameSet here -->
+
+            <KeyPosition
+                app:framePosition="75"
+                app:motionTarget="@id/moon"
+                app:keyPositionType="parentRelative"
+                app:percentY="0.6"
+                />
+
+            <KeyPosition
+                app:framePosition="90"
+                app:motionTarget="@id/moon"
+                app:keyPositionType="parentRelative"
+                app:percentY="0.1"
+                />
 
         </KeyFrameSet>
     </Transition>
