--- a/nd940-c3-advanced-android-programming-project-starter-master/starter/app/src/main/res/layout/content_detail.xml
+++ b/nd940-c3-advanced-android-programming-project-starter-master/starter/app/src/main/res/layout/content_detail.xml
@@ -16,8 +16,9 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="88dp"
+        android:layout_marginTop="32dp"
         android:text="@string/file_name"
+        android:textSize="24sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -27,12 +28,12 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="64dp"
         android:layout_marginEnd="16dp"
-        android:text="TextView"
+        android:text="@string/nulll"
         android:textColor="@color/colorPrimaryDark"
         android:textSize="20sp"
-        app:layout_constraintBaseline_toBaselineOf="@+id/name_label"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/name_label" />
+        app:layout_constraintStart_toEndOf="@+id/name_label"
+        tools:layout_editor_absoluteY="36dp" />
 
     <TextView
         android:id="@+id/status_label"
@@ -49,7 +50,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="64dp"
         android:layout_marginEnd="16dp"
-        android:text="TextView"
+        android:text="@string/nulll"
         android:textColor="@color/colorPrimaryDark"
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
