--- a/nd940-c3-advanced-android-programming-project-starter-master/starter/app/src/main/res/xml/content_detail_xml_frame_scene.xml
+++ b/nd940-c3-advanced-android-programming-project-starter-master/starter/app/src/main/res/xml/content_detail_xml_frame_scene.xml
@@ -6,25 +6,57 @@
     <Transition
         motion:constraintSetEnd="@+id/end"
         motion:constraintSetStart="@+id/start"
-        motion:duration="1000">
+        motion:duration="500">
         <OnClick
-            app:targetId="@id/name_label"
+            app:targetId="@id/name_text"
             app:clickAction="toggle"/>
     </Transition>
 
     <ConstraintSet android:id="@+id/start">
         <Constraint
-            android:id="@+id/name_label"
+            android:id="@+id/name_text"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:textSize="24sp"/>
+            app:layout_constraintBaseline_toBaselineOf="@+id/name_label"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/name_label"
+            android:layout_marginEnd="16dp"
+            android:layout_marginStart="64dp"
+            android:alpha="1.0" />
+
+        <Constraint
+        android:id="@+id/status_text"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="@+id/name_text"
+        app:layout_constraintTop_toBottomOf="@+id/name_text"
+        android:layout_marginTop="64dp"
+        android:layout_marginEnd="16dp"
+        android:alpha="1.0"/>
     </ConstraintSet>
 
     <ConstraintSet android:id="@+id/end">
         <Constraint
-            android:id="@+id/name_label"
+            android:id="@+id/name_text"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:textSize="28sp"/>
+            app:layout_constraintBaseline_toBaselineOf="@+id/name_label"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/name_label"
+            android:layout_marginEnd="16dp"
+            android:layout_marginStart="64dp"
+            android:alpha="0.25" />
+
+        <Constraint
+            android:id="@+id/status_text"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="@+id/name_text"
+            app:layout_constraintTop_toBottomOf="@+id/name_text"
+            android:layout_marginTop="264dp"
+            android:layout_marginEnd="16dp"
+            android:alpha="0.25"/>
     </ConstraintSet>
 </MotionScene>
