--- a/android-kotlin-login-start/app/src/main/res/layout/fragment_main.xml
+++ b/android-kotlin-login-start/app/src/main/res/layout/fragment_main.xml
@@ -16,7 +16,8 @@
   -->
 <layout
         xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:tools="http://schemas.android.com/tools">
+        xmlns:tools="http://schemas.android.com/tools"
+        tools:context=".MainFragment">
 
     <androidx.constraintlayout.widget.ConstraintLayout
             xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -35,6 +36,19 @@
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
                 tools:text="@string/login_button_text"/>
+
+        <TextView
+            android:id="@+id/settings_btn"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="@dimen/text_margin"
+            android:background="@color/colorAccent"
+            android:padding="10dp"
+            android:text="@string/settings_btn"
+            android:textColor="#ffffff"
+            android:textSize="20sp"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="parent"/>
 
         <TextView
                 android:id="@+id/welcome_text"
