--- a/nd940-android-kotlin-c4-starter-master/starter/app/src/main/res/layout/fragment_select_location.xml
+++ b/nd940-android-kotlin-c4-starter-master/starter/app/src/main/res/layout/fragment_select_location.xml
@@ -24,6 +24,17 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
+        <androidx.fragment.app.FragmentContainerView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:name="com.google.android.gms.maps.SupportMapFragment"
+            app:layout_constraintBottom_toTopOf="@+id/button"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent">
+
+        </androidx.fragment.app.FragmentContainerView>
+
         <Button
             android:id="@+id/button"
             android:layout_width="0dp"
