--- a/nd940-android-kotlin-c4-starter-master/starter/app/src/main/res/layout/fragment_select_location.xml
+++ b/nd940-android-kotlin-c4-starter-master/starter/app/src/main/res/layout/fragment_select_location.xml
@@ -19,7 +19,7 @@
             android:name="com.google.android.gms.maps.SupportMapFragment"
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            app:layout_constraintBottom_toTopOf="@+id/button"
+            app:layout_constraintBottom_toTopOf="@+id/select_location"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
@@ -36,7 +36,7 @@
         </androidx.fragment.app.FragmentContainerView>-->
 
         <Button
-            android:id="@+id/button"
+            android:id="@+id/select_location"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:background="@color/colorAccent"
