--- a/nd940-android-kotlin-c4-starter-master/starter/app/src/main/res/layout/activity_reminders.xml
+++ b/nd940-android-kotlin-c4-starter-master/starter/app/src/main/res/layout/activity_reminders.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools"
+    tools:context=".locationreminders.RemindersActivity">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/container"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        tools:context=".locationreminders.RemindersActivity">
+        android:layout_height="match_parent">
 
         <fragment
             android:id="@+id/nav_host_fragment"
